# ML

./: .gitignore  CMakeLists.txt
include/: DataLoader.h  Matrix.h  NeuralNetwork.h
include/ErrorFunctions/: BinaryCrossEntropyError.h  CategoricalCrossEntropyError.h  Error.h  MeanSquaredError.h
include/Layers/: ActivationLayer.h  DenseLayer.h  FlattenLayer.h  Layer.h  ReLU.h  Sigmoid.h  Softmax.h
include/Optimizers/: Optimizer.h  SGD.h
src/: DataLoader.cpp  DataLoader.tpp  DenseLayer.cpp  DenseLayer.tpp  Matrix.tpp  NeuralNetwork.cpp  NeuralNetwork.tpp
tests/: DataLoaderTests.cpp  MatrixTests.cpp  NeuralTests.cpp
